--- a/app/src/main/res/layout/activity_detalles_prod.xml
+++ b/app/src/main/res/layout/activity_detalles_prod.xml
@@ -4,33 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.valencia.cerostockbeta.MainActivity">
+    tools:context="com.example.valencia.cerostockbeta.DetallesProd">
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comprador"
+        android:text="TextView"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/hora"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="vendedor"
+        android:text="TextView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/button1"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
