--- a/app/src/main/res/layout/estructura_producto.xml
+++ b/app/src/main/res/layout/estructura_producto.xml
@@ -1,58 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:id="@+id/cont_item_root"
-    >
+    android:layout_height="220dp"
+    android:weightSum="1"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cont_item_root">
     <ImageView
         android:id="@+id/im_item_icon"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:src="@android:drawable/ic_menu_edit"
-        android:tint="@color/colorPrimary"
-
-        />
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:layout_weight="0.12" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="8dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:orientation="horizontal"
         android:id="@+id/holder_layout">
 
         <TextView
             android:id="@+id/Ibl_item_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
             android:layout_weight="1"
-            android:gravity="left"
-            android:text="dummy text"
-            android:textSize="40dp" />
+            android:textSize="22dp"
+            android:text="TextView"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/precio"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:text="TextView"/>
 
-            <TextView
-                android:id="@+id/precio"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="precio"
-                android:gravity="center_vertical"
-                android:layout_weight="2"/>
-
-            <TextView
-                android:id="@+id/hora"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:gravity="center_vertical"
-                android:text="HH:MM pm" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/hora"
+            android:layout_width="wrap_content"
+            android:layout_height="54dp"
+            android:layout_weight="1"
+            android:text="TextView"/>
     </LinearLayout>
-
 </LinearLayout>
